// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionInfo /> should render price element 1`] = `
<ul
  className="common__grid sg-10l9eav-root-noWrap-info"
>
  <GridItem
    aria-hidden={true}
    className="sg-wzlmdo-price"
    component="li"
    grow={1}
    shrink={1}
  >
    Label: 
    <FormatPrice
      className={null}
      currency="EUR"
      fractions={true}
      price={10}
    />
  </GridItem>
  <div
    hidden={true}
    id="some-id"
  >
    price.label
    Some Text
  </div>
</ul>
`;

exports[`<OptionInfo /> should render required element 1`] = `
<ul
  className="common__grid sg-10l9eav-root-noWrap-info"
>
  <GridItem
    aria-hidden={true}
    className="sg-10mixir-required"
    component="li"
    grow={0}
    shrink={1}
  >
    <Translate
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="common.required"
      transform={null}
    />
  </GridItem>
  <div
    hidden={true}
    id="some-id"
  >
    common.required
    Some Text
  </div>
</ul>
`;
